# article-extractor

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_pymupdf.py
app/: config.py  dependencies.py  main.py
app/extractors/: __init__.py  base.py  csv.py  doc.py  docx.py  html.py  libreoffice_base.py  libreoffice_formats.py  pages.py  pdf.py  plaintext.py  ppt.py  pptx.py  rtf.py  tex.py  xlsx.py
app/routers/: binary_extract.py  url_extract.py
app/utils/: cache.py  format_router.py  http_client.py
document_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
