[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-extractor"
version = "1.0.0"
description = "FastAPI service for extracting text content from documents"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pymupdf4llm>=1.0.0",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "mammoth>=1.8.0",
    "TexSoup>=0.3.1",
    "striprtf>=0.0.26",
    "httpx[http2]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
]
